--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ h1 {
 
 p {
     /* creates the border on the left and creates some space between the border and the text */
-    border-left: 2px solid #000;
+    border-left: 2px solid #69696a;
     padding-left: 10px;
 }
 
@@ -47,7 +47,10 @@ button {
 
 @media screen and (min-width: 768px) {
     /* nav {display: flex; flex-direction: row; float: right;} */
-    /* separating the company name from the other menu items by classes made it work! */
+    /* separating the company name from the other menu items by classes made it work! But I'm not sure if the below code counts as using "flex properties to separate company name and nav items" */
     .title {display: flex; flex-direction: row; float: left;}
     .menu {display: flex; flex-direction: row; float: right;}
+    .hire {position: absolute; top: -0; right: -0; width: auto;}
+    .scroll {width: auto;}
+    h1 {padding-top: 160px;}
 }
