--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,8 @@ body {
     font-family: "Open Sans", sans-serif;
     background-color: #f9fafc;
     color: #69696a;
+    padding-left: 10px;
+    height: 100%;
 }
 
 #title {
@@ -12,7 +14,6 @@ body {
 a:link {
     text-decoration: none;
     display: block;
-    padding: 5px;
 }
 
 a:visited {
@@ -28,8 +29,13 @@ a:active {
 }
 
 ul {
-    padding-left: 5px;
     list-style-type: none;
+    padding-left: 0;
+    margin-top: 0;
+}
+
+li {
+    padding-top: 10px;
 }
 
 h1 {
@@ -57,20 +63,49 @@ button {
     header {
         display: flex; 
         align-items: center; 
-        /* justify-content: flex-end; */
+        justify-content: space-between;
+        margin-top: 15px;
     }
     nav {
+        display: flex;
+        align-items: center;
         flex-direction: row; 
-        justify-content: flex-end;
     }
     /*separating the company name from the other menu items by classes made it work originally, but now it's not! */
-    #title {justify-content: flex-start;}
-    .menu {
-        display: flex; 
-        justify-content: flex-end; 
-        margin: 0;
+    #title {
+        /* display: flex;  */
+        /* justify-content: flex-start; */
     }
-    .hire {display: flex; flex-direction: row; align-items: center; width: 80px;}
-    .scroll {display: flex; justify-content: center; width: 100px;}
-    h1 {padding-top: 160px;}
+    .menu {
+        display: flex;  
+        margin: 0;
+        padding: 0;
+    }
+
+    li {
+        padding-top: 0;
+        padding-right: 10px;
+    }
+    .hire {
+        display: flex; 
+        flex-direction: row; 
+        align-items: center; 
+        width: 80px;
+        padding-right: 10px;
+    }
+    .bottom {
+        display: flex;
+        justify-content: center;
+        align-items: baseline;
+    }
+    .bottom button {
+        width: 100px;
+    }
+    h1 {
+        padding-top: 160px;
+    }
+    main {
+        margin-right: 50%;
+    }
+
 }
