--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,44 @@ button {
         padding-top: 160px;
     }
     main {
+        /* display: flex; */
+        /* justify-content: center; */
+        position: absolute;
+        /* top: 300px; */
+        display: inline-block;
+    }
+
+    p {
         margin-right: 50%;
     }
+
+    .shapes {
+        display: inline-block;
+        position: relative;
+        left: 500px;
+    }
+
+    .big {
+        background-color: rgba(247, 136, 167, 0.6);
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+      
+    }
+
+    .medium {
+        background-color: rgba(247, 193, 162, 0.7);
+        width: 75px;
+        height: 75px;
+        border-radius: 50%;
+    }
+
+    .small {
+        background-color: rgba(207, 130, 213, 0.6);
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
+
 
 }
