--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,7 @@ button {
         padding-top: 160px;
     }
     main {
-        /* display: flex; */
+        display: flex;
         /* justify-content: center; */
         position: absolute;
         /* top: 300px; */
@@ -113,35 +113,42 @@ button {
     }
 
     p {
-        margin-right: 50%;
+        width: 50%;
     }
 
     .shapes {
-        display: inline-block;
+        display: flex;
         position: relative;
-        left: 500px;
+        left: 1050px;
     }
 
     .big {
         background-color: rgba(247, 136, 167, 0.6);
-        width: 100px;
-        height: 100px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
-      
+        position: relative;
+        top: 170px;
+        left: 100px;
     }
 
     .medium {
         background-color: rgba(247, 193, 162, 0.7);
-        width: 75px;
-        height: 75px;
+        width: 150px;
+        height: 150px;
         border-radius: 50%;
+        position: relative;
+        top: 300px;
     }
 
     .small {
         background-color: rgba(207, 130, 213, 0.6);
-        width: 50px;
-        height: 50px;
+        width: 100px;
+        height: 100px;
         border-radius: 50%;
+        position: relative;
+        top: 220px;
+        right: 100px;
     }
 
 
