--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,8 @@ body {
     background-color: #f9fafc;
     color: #69696a;
     padding-left: 10px;
-    height: 100%;
+    height: 100vh;
+    /* width: 100%; */
 }
 
 #title {
@@ -99,7 +100,8 @@ button {
         display: flex;
         position: absolute;
         bottom: 0;
-        left: 45%;
+        left: 50%;
+        transform: translateX(-50%);
         align-items: baseline;
         justify-content: center;
     }
@@ -117,20 +119,23 @@ button {
     }
     main {
         display: flex;
-        /* justify-content: center; */
-        position: absolute;
+        justify-content: space-between;
+        align-items: flex-start;
+        /* position: absolute; */
         /* top: 300px; */
-        display: inline-block;
+        /* display: inline-block; */
     }
 
     p {
-        width: 50%;
+        width: 50vw;
     }
 
     .shapes {
         display: flex;
         position: relative;
-        left: 1050px;
+        width: 50%;
+        height: 500px;
+        /* border: 1px solid red; */
     }
 
     .big {
@@ -138,9 +143,9 @@ button {
         width: 200px;
         height: 200px;
         border-radius: 50%;
-        position: relative;
+        position: absolute;
         top: 170px;
-        left: 100px;
+        right: 100px;
     }
 
     .medium {
@@ -148,8 +153,9 @@ button {
         width: 150px;
         height: 150px;
         border-radius: 50%;
-        position: relative;
+        position: absolute;
         top: 300px;
+        right: 50px;
     }
 
     .small {
@@ -157,9 +163,9 @@ button {
         width: 100px;
         height: 100px;
         border-radius: 50%;
-        position: relative;
-        top: 220px;
-        right: 100px;
+        position: absolute;
+        top: 225px;
+        right: 50px;
     }
 
 
